<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/bottom_menu_home_text"
        android:icon="@drawable/bottom_menu_home_selector"/>
    <item
        android:id="@+id/profiles_services_manager_vis"
        android:title="@string/bottom_menu_favorites_text"
        android:icon="@drawable/bottom_menu_favorites_selector"/>
    <item
        android:id="@+id/newService"
        android:title="@string/bottom_menu_upload_text"
        android:icon="@drawable/bottom_menu_upload_selector"/>
    <item
        android:id="@+id/verConversaciones"
        android:title="@string/bottom_menu_email_text"
        android:icon="@drawable/deal_icon"/>
    <item
        android:id="@+id/accountOptions"
        android:title="@string/bottom_menu_profile_text"
        android:icon="@drawable/bottom_menu_profile_selector"/>

</menu>