<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Users.view.fragments.UserReport">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_horizontal_cl"
            android:paddingVertical="@dimen/padding_vertical_cl">


            <ImageView
                android:id="@+id/reportUser_backArrow"
                android:contentDescription="@string/txt_volver_atras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/userIamge"
                android:contentDescription="@string/txt_profile_image"
                android:layout_width="@dimen/user_image_w"
                android:layout_height="@dimen/user_image_h"
                android:layout_marginTop="@dimen/marginTop_extra_big"
                android:src="@drawable/ic_baseline_account_circle_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/userName"
                style="@style/Widget.LetMeDoIt.title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/userReport_userName_marginTop"
                android:text="@string/name_surname"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userIamge" />

            <TextView
                android:id="@+id/by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop_extra"
                android:text="@string/by"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/userName" />

            <TextView
                android:id="@+id/comment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_comment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_c" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/comment_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/userReport_comment_marginTop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comment_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/userReport_comment_h"
                    android:hint="@string/txt_hint"
                    style="@style/Widget.LetMeDoIt.TextArea"/>
            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_misbehaviour"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/by" />

            <CheckBox
                android:id="@+id/checkBox_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_fraud"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_a" />


            <CheckBox
                android:id="@+id/checkBox_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_ofensive_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_b" />

            <Button
                android:id="@+id/btn_report"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margins_start_end_extra"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_marginEnd="@dimen/margins_start_end_extra"
                android:text="@string/report"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comment_text" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>