<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Users.view.activities.RecoveryPassword_email"
    android:paddingHorizontal="@dimen/padding_horizontal_cl"
    android:paddingVertical="@dimen/padding_vertical_cl">

    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/txt_volver_atras"
        app:srcCompat="@drawable/arrow_back" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins_start_end_extra"
        android:layout_marginTop="@dimen/marginTop_extra_big"
        android:text="@string/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enter_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins_start_end_extra"
        android:layout_marginTop="@dimen/marginTop"
        style="@style/Widget.LetMeDoIt.subtext"
        android:text="@string/enter_your_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins_start_end"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/margins_start_end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_email"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/azul_marino">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            android:inputType="textWebEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margins_start_end"
        android:layout_marginTop="@dimen/marginTop_extra"
        android:layout_marginEnd="@dimen/margins_start_end"
        android:text="@string/get_recovery_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextInput" />
</androidx.constraintlayout.widget.ConstraintLayout>