<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuAdmin"
    android:paddingVertical="@dimen/padding_vertical_cl"
    android:paddingHorizontal="@dimen/padding_horizontal_cl">

    <TextView
        android:id="@+id/admin_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_AdminTitle"
        android:text="Admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        style="@style/Divider"
        android:layout_marginTop="@dimen/marginTop_Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admin_title" />

    <Button
        android:id="@+id/btn_Users"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/btn_margin_admin"
        android:layout_marginTop="@dimen/btn_margin_admin"
        android:layout_marginEnd="@dimen/btn_margin_admin"
        android:text="@string/admin_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/btn_bannedUsers"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/btn_margin_admin"
        android:layout_marginEnd="@dimen/btn_margin_admin"
        android:text="@string/banned_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_Users" />

    <Button
        android:id="@+id/btn_reports"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/btn_margin_admin"
        android:layout_marginEnd="@dimen/btn_margin_admin"
        android:layout_marginTop="@dimen/btn_margin_admin"
        android:text="@string/reports"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_bannedUsers" />

    <Button
        android:id="@+id/btn_archivedReports"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/btn_margin_admin"
        android:layout_marginEnd="@dimen/btn_margin_admin"
        android:text="@string/archived_reports"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_reports" />

    <Button
        android:id="@+id/btn_categories"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/btn_margin_admin"
        android:layout_marginEnd="@dimen/btn_margin_admin"
        android:layout_marginTop="@dimen/btn_margin_admin"
        android:text="@string/categories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_archivedReports" />

    <Button
        android:id="@+id/btn_createAdmin"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/btn_margin_admin"
        android:layout_marginEnd="@dimen/btn_margin_admin"
        android:layout_marginTop="@dimen/btn_margin_admin"
        android:text="@string/create_admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_categories" />

    <Button
        android:id="@+id/btn_singOff"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/btn_margin_admin"
        android:layout_marginTop="@dimen/btn_marginTop_signOff_admin"
        android:layout_marginEnd="@dimen/btn_margin_admin"
        android:text="@string/sign_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_createAdmin" />


</androidx.constraintlayout.widget.ConstraintLayout>