<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/padding_horizontal_cl"
    android:paddingVertical="@dimen/padding_vertical_cl"
    tools:context=".Visitante.view.activities.Login">

    <ImageView
        android:id="@+id/btn_exit_login"
        android:contentDescription="@string/txt_close_window"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_vertical_cl">

        <androidx.cardview.widget.CardView
            android:id="@+id/frame_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:cardCornerRadius="@dimen/spinner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_logo"
                android:contentDescription="@string/txt_logo_app"
                android:layout_width="@dimen/logo_dimen"
                android:layout_height="@dimen/logo_dimen"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo_letmedoit" />


        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/txt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_horizontal_cl"
            android:text="@string/txt_login_signIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frame_logo" />

        <TextView
            android:id="@+id/txt_home_welcome"
            style="@style/Widget.LetMeDoIt.subtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_home_welcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_register" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_home_welcome"
            app:startIconDrawable="@drawable/person_icon"
            app:startIconTint="@color/azul_marino">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_username"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_username"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/azul_marino"
            app:startIconDrawable="@drawable/lock_icon"
            app:startIconTint="@color/azul_marino">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btn_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_forgot_password"
            android:background="?attr/selectableItemBackground"
            android:text="@string/txt_login_forgotPassword"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toTopOf="@+id/btn_sign_in"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginBottom="@dimen/marginTop"
            android:text="@string/txt_login_signIn"
            app:layout_constraintBottom_toTopOf="@+id/btn_signUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btn_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="@string/txt_login_signUp"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>